| Summary: | ASTERISK-24430: missing letter "p" in word response in OriginateResponse event documentation | ||
| Reporter: | Dafi Ni (dafi) | Labels: | |
| Date Opened: | 2014-10-17 04:49:05 | Date Closed: | 2014-10-28 09:59:18 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/ManagerInterface Documentation |
| Versions: | 12.6.0 13.0.0-beta1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | there is missing letter "p" in word "Response" in manager.c
{quote} <managerEvent language="en_US" name="OriginateResponse"> <managerEventInstance class="EVENT_FLAG_CALL"> <synopsis>Raised in response to an Originate command.</synopsis> <syntax> <parameter name="ActionID" required="false"/> <parameter name="Resonse"> <enumlist> <enum name="Failure"/> <enum name="Success"/> </enumlist> </parameter> <parameter name="Channel"/> <parameter name="Context"/> <parameter name="Exten"/> <parameter name="Reason"/> <parameter name="Uniqueid"/> <parameter name="CallerIDNum"/> <parameter name="CallerIDName"/> </syntax> <see-also> <ref type="manager">Originate</ref> </see-also> </managerEventInstance> </managerEvent> {quote} | ||
| Comments: | |||