main/manager: Fix typo in AMI event documentation of "OriginateResponse"

The parameter name is "Response", not "Resonse".

ASTERISK-24430 #close
Reported by: Dafi Ni


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/11@426366 65c4cc65-6c06-0410-ace0-fbb531ad65f3